--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -50,3 +50,50 @@
     color: white;
     text-overflow: inherit;
 }
+
+.hero-text>div:nth-of-type(3) {
+    font-size: 1rem;
+    font-weight: 200;
+    text-transform: none;
+    letter-spacing: 1px;
+    width: 80%;
+}
+
+.figuras {
+    display: flex;
+    gap: 2rem;
+}
+
+.figuras>div {
+    display: flex;
+    flex-direction: column;
+}
+
+.figuras>div>span:nth-of-type(1) {
+    color: white;
+    font-size: 2rem;
+}
+
+.figuras>div>span:nth-of-type(2) {
+    color: grey;
+    text-transform: uppercase;
+}
+
+.hero-buttons {
+    display: flex;
+    gap: 1rem;
+    font-weight: normal;
+}
+
+.hero-buttons>:nth-child(1) {
+    color: white;
+    background-color: orange;
+    width: 8rem;
+}
+
+.hero-buttons>:nth-child(2) {
+    color: white;
+    background-color: transparent;
+    width: 8rem;
+    border: 2.3px solid orange;
+}
