--- a/src/components/Motivos/Motivos.css
+++ b/src/components/Motivos/Motivos.css
@@ -1,5 +1,5 @@
 .Motivos {
-    padding: 0.2rem;
+    padding: 0 2rem;
     display: flex;
     grid-template: 2rem;
 }
@@ -8,7 +8,7 @@
     flex: 1 1;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 0.5rem;
+    gap: 1rem;
     grid-auto-rows: 1fr;
 }
 
@@ -17,7 +17,7 @@
 }
 
 .esquerda-m>:nth-child(1) {
-    width: 10rem;
+    width: 12rem;
     grid-row: 1/3;
     height: 28rem;
 }
@@ -31,6 +31,7 @@
 .esquerda-m>:nth-child(3) {
     width: 14rem;
     grid-column: 2/3;
+    grid-row: 2;
 }
 
 .esquerda-m>:nth-child(4) {
