Adição de blur ao fundo dos paineis

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -147,6 +147,12 @@
     width: 15rem;
 }
 
+.hero-blur {
+    width: 22rem;
+    height: 30rem;
+    left: 0;
+}
+
 .calories {
     display: flex;
     gap: 2rem;
