Adição da responsividade, auto-scroll e mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -26,3 +26,18 @@
     color: orange;
     cursor: pointer;
 }
+
+@media screen and (max-width: 768px) {
+    .header>:nth-child(2) {
+        position: fixed;
+        right: 2rem;
+        z-index: 99;
+    }
+
+    .header-menu {
+        display: flex;
+        flex-direction: column;
+        background-color: var(--appColor);
+        padding: 2rem;
+    }
+}
