--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -183,3 +183,94 @@
     color: white;
     font-size: 1.5rem;
 }
+
+@media screen and (max-width: 768px) {
+    .hero {
+        flex-direction: column;
+    }
+
+    .hero-blur {
+        width: 14rem;
+    }
+
+    .propaganda {
+        margin-top: 0;
+        font-size: small;
+        align-self: center;
+        transform: scale(0.8);
+    }
+
+    .hero-text {
+        position: relative;
+        font-size: xx-large;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .hero-text .center-span {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+    }
+
+    .hero-text>div:nth-child(3) {
+        font-size: small;
+        font-weight: 200;
+        letter-spacing: 1px;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .hero-buttons {
+        justify-content: center;
+    }
+
+    .figuras>div>span:nth-of-type(1) {
+        font-size: large;
+        
+    }
+
+    .figuras>div>span:nth-of-type(2) {
+        font-size: x-small;
+    }
+
+    .direita-h {
+        position: relative;
+        background: none;
+    }
+
+    .heart-rate {
+        left: 1rem;
+        top: 2rem;
+    }
+
+    .calories {
+        position: relative;
+        top: 5rem;
+        left: 2rem;
+    }
+
+    .calories>img {
+        width: 2rem;
+    }
+
+    .calories>div>:nth-child(2) {
+        color: white;
+        font-size: 1rem;
+    }
+
+    .hero-image {
+        position: relative;
+        width: 15rem;
+        left: 7rem;
+        top: 4rem;
+        align-self: center;
+    }
+
+    .hero-image-back {
+        width: 15rem;
+        left: 2rem;
+        top: 0rem;
+    }
+}
