--- a/src/components/Depoimentos/Depoimentos.css
+++ b/src/components/Depoimentos/Depoimentos.css
@@ -76,3 +76,39 @@
     width: 1.5rem;
     cursor: pointer;
 }
+
+@media screen and (max-width: 768px) {
+    .Depoimentos {
+        flex-direction: column;
+    }
+
+    .esquerda-e>:nth-child(2), .esquerda-e>:nth-child(3) {
+        font-size: xx-large;
+    }
+
+    .direita-d {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2rem;
+    }
+
+    .direita-d>div {
+        position: relative;
+        display: none;
+    }
+
+    .direita-d>img {
+        top: 0;
+        right: 0;
+        position: relative;
+        align-self: center;
+    }
+
+    .direita-d>:last-child {
+        display: block;
+        bottom: 0;
+        left: 0;
+    }
+}
