--- a/src/components/Join/Join.css
+++ b/src/components/Join/Join.css
@@ -48,3 +48,19 @@
     background-color: var(--orange);
     color: white;
 }
+
+@media screen and (max-width: 768px) {
+    .Join {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .esq-j {
+        font-size: x-large;
+        flex-direction: column;
+    }
+
+    .dir-j {
+        padding: 2rem;
+    }
+}
