--- a/src/components/Programs/Programs.css
+++ b/src/components/Programs/Programs.css
@@ -61,3 +61,18 @@
     background-color: rgb(255, 123, 0);
     cursor: pointer;
 }
+
+@media screen and (max-width: 769px) {
+    .programs-header {
+        flex-direction: column;
+        gap: 1rem;
+        font-size: x-large;
+        align-items: center;
+        justify-content: center;
+        margin-top: 2rem;
+    }
+
+    .program-categories {
+        flex-direction: column;
+    }
+}
